syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string image = 4;
  string category = 5;
  float price = 6;
  int32 qty = 7;
}